# weather.app

./: .gitignore  AGENT.md  Cargo.toml  Makefile  README.md  buf.yaml
.github/scripts/: bundle-linux.sh  bundle-macos.sh  bundle-windows.ps1
.github/workflows/: bundle-linux.yml  bundle-macos.yml  bundle-windows.yml  bundle.yml  ci-linux.yml  ci-macos.yml  ci-windows.yml  ci.yml
scripts/: explore_nmc_api.sh  fetch_weather.sh  inspect_nmc_capabilities.sh  list_cities.sh  list_provinces.sh
weather-build-support/: Cargo.toml
weather-build-support/src/: lib.rs
weather-core/conf/: Cargo.toml
weather-core/conf/src/: components.rs  defaults.rs  lib.rs  load.rs  normalize.rs  persist.rs  proto_conv.rs  state.rs  types.rs  validate.rs
weather-core/daemon/: Cargo.toml  build.rs
weather-core/daemon/src/: cli.rs  lib.rs  logging.rs  main.rs  path.rs  probe.rs  run.rs  service.rs  stop.rs  time.rs
weather-core/daemon/src/service/: helper.rs  linux.rs  windows.rs
weather-core/daemon/src/service/linux/: systemd.rs
weather-core/daemon/src/service/windows/: service_control.rs
weather-core/db/: Cargo.toml
weather-core/db/src/: actor.rs  lib.rs  migration.rs  paths.rs  storage.rs  validation.rs
weather-core/engine/: Cargo.toml  build.rs
weather-core/engine/src/: catalog.rs  config_normalizer.rs  handlers.rs  lib.rs  lifecycle.rs  limits.rs  lock.rs  refresh.rs  resource_cache.rs  runtime.rs  server.rs  singleflight.rs  station.rs  time.rs
weather-core/engine/src/handlers/: batch.rs  catalog.rs  compatibility.rs  config.rs  envelope.rs  events.rs  failure.rs  fuzzy.rs  migrate_tz.rs  resolve.rs  resource.rs  response.rs  temperature_history.rs  weather.rs
weather-core/engine/src/server/: e2e.rs
weather-core/manifest/: Cargo.toml
weather-core/manifest/src/: lib.rs
weather-core/updater/: Cargo.toml
weather-core/updater/src/: catalog.rs  client.rs  lib.rs  provider.rs  util.rs
weather-core/updater/src/provider/: nmc.rs
weather-core/updater/src/provider/nmc/: dto.rs  mod.rs  tests.rs  transport.rs
weather-core/updater/src/provider/nmc/fixtures/: catalog_urls.json  weather_alias_fallback.json  weather_full.json  weather_malformed_optional.json  weather_minimal_real.json  weather_nonzero_null.json  weather_success_null.json
weather-core/updater/src/provider/nmc/mapper/: charts.rs  core.rs  mod.rs  optional.rs  value.rs
weather-core/utils/: Cargo.toml
weather-core/utils/src/: lib.rs
weather-renderer/common/: Cargo.toml
weather-renderer/common/src/: client.rs  daemon.rs  date.rs  lib.rs  pagination.rs
weather-renderer/common/src/client/: failure.rs
weather-renderer/gui/: README.md  index.html  package.json  tsconfig.json  vite.config.ts
weather-renderer/gui/assets/: README.md
weather-renderer/gui/scripts/: stage-daemon.mjs  tauri.mjs  tauri.test.ts
weather-renderer/gui/src/: air.ts  assets.ts  bridge.ts  date.ts  history.ts  icons.ts  main.ts  motion.ts  styles.css  types.ts
weather-renderer/gui/src-tauri/: Cargo.toml  nsis-hooks.nsh  tauri.conf.json
weather-renderer/gui/src-tauri/capabilities/: default.json
weather-renderer/gui/src-tauri/icons/: icon.icns
weather-renderer/gui/src-tauri/src/: gui_cache.rs  gui_config.rs  lib.rs  main.rs
weather-renderer/gui/tests/: air.test.ts  assets.test.ts  history.test.ts
weather-renderer/tui/: Cargo.toml  build.rs
weather-renderer/tui/src/: cli.rs  client.rs  command.rs  connection.rs  daemon.rs  lib.rs  main.rs  pagination.rs  presentation.rs  render.rs  search.rs  terminal.rs  tui.rs  util.rs
weather-renderer/tui/src/client/: failure.rs  pending.rs  session.rs
weather-renderer/tui/src/tui/: effects.rs  events.rs  input.rs  state.rs  view.rs
weather-schema/: Cargo.toml  build.rs
weather-schema/src/: codec.rs  constants.rs  correlation.rs  crypto.rs  diagnostics.rs  lib.rs  lifecycle.rs  station.rs  time.rs  uuid.rs
weather-schema/weather/schema/v1/: weather.proto
