[workspace]
resolver = "3"
members = [
  "weather-schema",
  "weather-core/conf",
  "weather-core/utils",
  "weather-core/db",
  "weather-core/updater",
  "weather-core/engine",
  "weather-core/daemon",
  "weather-renderer/tui",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "WTFPL"

[profile.release-lto-static]
inherits = "release"
lto = "fat"
codegen-units = 1
opt-level = 3
panic = "abort"
strip = "symbols"

[workspace.dependencies]
anyhow = "1.0"
chrono = "0.4"
chrono-tz = "0.10"
clap = { version = "4.5", features = ["derive"] }
fs2 = "0.4"
hex = "0.4"
hmac = "0.12"
prost = "0.14"
prost-build = "0.14"
protoc-bin-vendored = "3"
ratatui = "0.30"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
same-file = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "2.0"
tempfile = "3.27"
tokio = { version = "1.45", features = ["macros", "rt-multi-thread", "time", "sync", "process", "signal", "net"] }
toml = "0.8"
uuid = { version = "1.23", features = ["v4"] }
zeromq = "0.6"
crossterm = "0.29"
