[package]
name = "weather-schema"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
hex.workspace = true
hmac.workspace = true
prost.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
uuid.workspace = true

[build-dependencies]
prost-build.workspace = true
protoc-bin-vendored.workspace = true
