[package]
name = "weather-configure"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
chrono-tz.workspace = true
serde.workspace = true
rusqlite.workspace = true
tempfile.workspace = true
tokio.workspace = true
toml.workspace = true
weather-schema = { path = "../../weather-schema" }
