[package]
name = "weather-daemon"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
fs2.workspace = true
prost.workspace = true
same-file.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
weather-configure = { path = "../conf" }
weather-engine = { path = "../engine" }
weather-manifest = { path = "../manifest" }
weather-schema = { path = "../../weather-schema" }
zeromq.workspace = true

[build-dependencies]
toml.workspace = true

[dev-dependencies]
tempfile.workspace = true
toml.workspace = true

[[bin]]
name = "weather-daemon"
path = "src/main.rs"
