[package]
name = "weather-daemon"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
fs2.workspace = true
log.workspace = true
prost.workspace = true
same-file.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
chrono.workspace = true
weather-configure = { path = "../conf" }
weather-engine = { path = "../engine" }
weather-manifest = { path = "../manifest" }
weather-schema = { path = "../../weather-schema" }
zeromq.workspace = true

[target.'cfg(windows)'.dependencies]
windows-service.workspace = true
windows-sys = { workspace = true, features = ["Win32_Foundation"] }

[dev-dependencies]
tempfile.workspace = true
toml.workspace = true
