[package]
name = "weather-db"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
chrono-tz.workspace = true
log.workspace = true
rusqlite.workspace = true
tokio.workspace = true
weather-schema = { path = "../../weather-schema" }

[dev-dependencies]
tempfile.workspace = true
