[package]
name = "weather-tui"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
crossterm.workspace = true
prost.workspace = true
ratatui.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
toml.workspace = true
weather-schema = { path = "../../weather-schema" }
weather-renderer-common = { path = "../common" }

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["test-util"] }

[build-dependencies]
weather-build-support = { path = "../../weather-build-support" }
