[package]
name = "weather-gui"
version.workspace = true
edition.workspace = true
build = "build.rs"

[lib]
name = "weather_gui_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
anyhow.workspace = true
chrono.workspace = true
prost.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
tauri.workspace = true
tempfile.workspace = true
tokio.workspace = true
toml.workspace = true
weather-renderer-common = { path = "../../common" }
weather-schema = { path = "../../../weather-schema" }

[build-dependencies]
tauri-build.workspace = true

[[bin]]
name = "weather-gui"
path = "src/main.rs"
